@@ -350,6 +350,7 @@
           </executions>
           <configuration>
             <forkCount>${failsafe.forkCount}</forkCount>
+            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
             <reuseForks>true</reuseForks>
             <trimStackTrace>false</trimStackTrace>
             <systemPropertyVariables>
